[package]
name = "fdt-rs"
version = "0.1.1"
description = "A flattened device tree parser for embedded no-std environments"
authors = ["Sean Wilson <sean.wilson@ghs.com>"]
license = "MIT"
edition = "2018"
repository = "https://gitlab.com/ertos/fdt-rs"
readme = "README.md"
categories = ["embedded", "parsing", "os", "no-std", "memory-management"]
keywords = ["Device", "Tree", "DTB",  "FDT", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.endian-type-rs]
version = "0.1.4"
default-features = false
[dependencies.num-derive]
version = "0.3"
default-features = false
[dependencies.num-traits]
version = "0.2"
default-features = false
[dependencies.memoffset]
version = "0.5.4"
default-features = false
[dependencies.cfg-if]
version = "0.1"
[dependencies.ascii]
version = "1.0.0"
default-features = false
optional = true

[features]
default = []#["std"]
std = []

