[package]
name = "fdt-rs"
version = "0.2.0"
description = "A flattened device tree parser for embedded no-std environments"
authors = ["Sean Wilson <spwilson27@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://gitlab.com/ertos/fdt-rs"
readme = "README.md"
categories = ["embedded", "parsing", "os", "no-std", "memory-management"]
keywords = ["Device", "Tree", "DTB",  "FDT", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.endian-type-rs]
version = "0.1.4"
default-features = false
[dependencies.num-derive]
version = "0.3"
default-features = false
[dependencies.num-traits]
version = "0.2"
default-features = false
[dependencies.memoffset]
version = "0.5.4"
default-features = false

[dependencies]
unsafe_unwrap = "0.1.0"
static_assertions = "1"
fallible-iterator = "0.2"

[build-dependencies]
rustc_version = "0.2"

[features]
default = ["std"]
std = []
alloc = []
doctest = []

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "parsing_test"
harness = false
