[package]
name = "fdt-rs"
version = "0.4.5"
description = "A flattened device tree parser for embedded no-std environments"
authors = ["Sean Wilson <spwilson27@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/rs-embedded/fdt-rs"
readme = "README.md"
categories = ["embedded", "parsing", "os", "no-std", "memory-management"]
keywords = ["Device", "Tree", "DTB",  "FDT", "no-std"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.endian-type-rs]
version = "0.1.4"
default-features = false
[dependencies.num-derive]
version = "0.3"
default-features = false
[dependencies.num-traits]
version = "0.2"
default-features = false
[dependencies.memoffset]
version = "0.5.4"
default-features = false
[dependencies.fallible-iterator]
version = "0.2"
default-features = false
[dependencies.static_assertions]
version = "1"
default-features = false
[dependencies.unsafe_unwrap]
version = "0.1"
default-features = false

[build-dependencies]
rustc_version = "0.2"

[features]
default = ["std"]
std = ["fallible-iterator/std"]
alloc = ["fallible-iterator/alloc"]
doctest = []
